style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/
@font-face {
  font-family: 'Avalon-Book';
  src: url('fonts/Avalon-Book.eot?#iefix') format('embedded-opentype'),  url('fonts/Avalon-Book.woff') format('woff'), url('fonts/Avalon-Book.ttf')  format('truetype'), url('fonts/Avalon-Book.svg#Avalon-Book') format('svg');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Avalon-Bold';
  src: url('fonts/Avalon-Bold.eot?#iefix') format('embedded-opentype'),  url('fonts/Avalon-Bold.woff') format('woff'), url('fonts/Avalon-Bold.ttf')  format('truetype'), url('fonts/Avalon-Bold.svg#Avalon-Bold') format('svg');
  font-weight: normal;
  font-style: normal;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}

a {
      text-decoration:none;
   }

ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* End of Meyer Reset CSS */

img {
	max-width: 100%; /*makes images scale with flexible grids*/
	display: block; /*removes tiny space added in some browsers below images */
}

html,body {

}

.orangewrap {
    overflow: hidden;
    position: relative;
    height: 100vh;
    width: 100%;
    max-width: 1300px;
    margin: 0 auto;
    background-color: orange;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f28c39+0,d84c25+100 */
background: #f28c39; /* Old browsers */
background: -moz-linear-gradient(top, #f28c39 0%, #d84c25 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(top, #f28c39 0%,#d84c25 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(to bottom, #f28c39 0%,#d84c25 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f28c39', endColorstr='#d84c25',GradientType=0 ); /* IE6-9 */
copy
}

.bottomcircle {
    position: absolute;
    width: 200%;
    margin-left: -50%;
    bottom: 0;
    margin-bottom: -20px;
    background-color: white;
    height: 15vh;
    border-radius: 50%;
    z-index: 100;
    -webkit-box-shadow: 0px -3px 29px 0px rgba(0,0,0,0.3);
-moz-box-shadow: 0px -3px 29px 0px rgba(0,0,0,0.3);
box-shadow: 0px -3px 29px 0px rgba(0,0,0,0.3);
}

.logofit {
    position: absolute;
    z-index: 101;
    width: 50%;
    max-width: 300px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    bottom: 0;
    margin-bottom: 4%;
}

.middlebar {
    margin-top: 2vh;
    margin-left: auto;
    margin-right: auto;
    width: 2px;
    z-index: 5;
    background-color: black;
    height: 83%;
    opacity: 0.1;
    
}

.calcwrapper {
    position: absolute;
    width: 100%;
    height: 87vh;
    margin-top: 1%;
    /* background-color: green; */
    
}

.column {
    width: 45%;
    margin-left: 3.3%;
    float: left;
    /* background-color: red; */
    height: 100%;
}


.hitbox1 {
    position: relative;
    z-index: 3;
    width: 60%;
    height: 16vh;
    margin-top: 11%;
    margin-bottom: 10%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-height: 130px;
}

.hitbox2 {
    position: relative;
    z-index: 4;
    width: 60%;
    height: 18vh;
    padding-top: 8%;
    margin-bottom: 11%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-height: 170px;
}

.hitbox3 {
    position: relative;
    z-index: 5;
    width: 60%;
    height: 16vh;
    padding-top: 10%;
    margin-bottom: 14%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-height: 150px;
}

.hitbox4 {
    position: relative;
    z-index: 6;
    width: 60%;
    height: 16vh;
    padding-top: 5%;
    margin-bottom: 16%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-height: 150px;
}

.title {
    font-size: .9em;
    width: 150%;
    text-align: center;
    margin-left: -24%;
    color: white;
    font-family: 'Avalon-Bold';
    -webkit-font-smoothing: antialiased;
}

.titlelite {
    font-family: 'Avalon-Book';
    -webkit-font-smoothing: antialiased;
}


.verticalbar {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    margin-top: 22vh;
    margin-left: auto;
    margin-right: auto;
    height: 2px;
    width: 90vw;
    max-width: 1250px;
    opacity: 0.1;
    background-color: black;
}

.verticalbar2 {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    margin-top: 44vh;
    margin-left: auto;
    margin-right: auto;
    height: 2px;
    width: 90vw;
    max-width: 1250px;
    opacity: 0.1;
    background-color: black;
}

.verticalbar3 {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    margin-top: 66vh;
    margin-left: auto;
    margin-right: auto;
    height: 2px;
    width: 90vw;
    max-width: 1250px;
    opacity: 0.1;
    background-color: black;
}

.header {
    color: white;
    font-size: 1.3em;
    font-family: 'Avalon-Bold';
    -webkit-font-smoothing: antialiased;
    width: 100%;
    text-align: center;
    padding-top: 7%;
    padding-bottom: 4%;
}
/* ... */

